# RobotWars

./: .gitignore  README.md  code_for_video.py  postman_collection.json  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: my-custom-template.md  user-story-template.md  user-story.md
.github/workflows/: python-build.yml
RobotWarsApi/: api.py
Server/: client_side.py  server_side.py
ai_trainer/: random_policy.py  requirements.txt  tank_env.py  tank_trainer.py  test.py
database/: database.py
experiments/: README.md
experiments/actions_for_video/: actions_for_video.py
experiments/aruco_markers/: aruco_demo.py  aruco_with_controller.py  camera_callibration.py  collect_images.py  create_room.py  draw_map.py  requirements.txt  robot.py
experiments/basic_examples/: drive_and gimbal_aim.py
experiments/battery_check/: battery_and_recenter.py
experiments/connection/: qr.py
experiments/controller_controller/: SensorLogger.py  db_logger.py  main.py  requirements.txt
experiments/face_tracker/: face_tracker.py
experiments/path_finder/: main.py  requirements.txt
experiments/sensor_video_recorder/: .gitignore  Analysis.ipynb  record.py
experiments/trackers/: face_tracker.py  robo_tracker.py
experiments/workflow/: data_funcs.py
robotwarsreact/: package.json
robotwarsreact/public/: index.html
robotwarsreact/src/: App.css  App.js  index.css
server/: aws.py  firebase.py
src/ai_trainer/: classes.py  pipeline.py
src/common/: database.py
src/game_leader/server/: api.py  (+2 more)
src/robot/: api.py
tests/: ai_trainer_classes_test.py  client_websockets.py  placeholder_test.py
(+114 files in other folders)
