[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[tool:pytest]
testpaths = tests

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[flake8]
max-line-length=140
max-complexity=40
exclude=^docs/,
        setup.py,
        __init__.py,
        ^tests/,
        venv,
        build,
        src/robot/S1_Module/S1_ws/src/teleop_joy/teleop_joy/inputs.py,
        src/robot/S1_Module/S1_ws/install,
        src/robot/S1_Module/S1_ws/log,
        src/robot/S1_Module/S1_ws/src/S1_master/resource,
        src/robot/S1_Module/S1_ws/src/S1_master/test,
        src/robot/S1_Module/S1_ws/src/S1_master/setup.cfg,
        src/robot/S1_Module/S1_ws/src/S1_master/setup.py,
        src/robot/S1_Module/S1_ws/src/teleop_joy/resource,
        src/robot/S1_Module/S1_ws/src/teleop_joy/test,
        src/robot/S1_Module/S1_ws/src/teleop_joy/setup.cfg,
        src/robot/S1_Module/S1_ws/src/teleop_joy/setup.py
ignore = C812,C813,W503,D107
select = C,D,E,F,W,B,B950
